--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,9 @@ jobs:
 
      
   build:
-
+    # ubuntu-latest, ubuntu-18.04, or ubuntu-16.04
+    # windows-latest, windows-2019, or windows-2016
+    # macOS-latest or macOS-10.14
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
